test/parser/channel/003.stderr
At: "003.hac":3:
parse error: syntax error
parser stacks:
state	value
#STATE#	(null) 
#STATE#	(null) 
#STATE#	(null) 
#STATE#	keyword: defchan [3:1..7]
#STATE#	identifier: mychan [3:9..14]
#STATE#	<: [3:16]
#STATE#	(chan-type) [3:19..22]
#STATE#	( [3:23]
#STATE#	paramtype: pbool [3:24..28]
in state #STATE#, possible rules are:
	data_type_ref_list_optional_in_parens : '(' . data_type_ref_list_optional ')'  (#RULE#)
	data_type_ref_list_optional : .  (#RULE#)
acceptable tokens are: 
	')' (reduce)
	ID (shift)
	SCOPE (shift)
	INT_TYPE (shift)
	BOOL_TYPE (shift)
