test/parser/channel/003.hac
// "003.hac" should fail, need data-type in list

defchan mychan <: chan(pbool) (int i);

